adding redis service call

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,11 @@
     </head>
 
     <body>
-        <h3>decahomes</h3>
+        <h3 id="xxx">decahomes</h3>
         <hr>
+
+	<script>
+		document.getElementById("xxx").innerHTML = "DecaHomes " + new Date();
+	</script> 
     </body>
 </html>
